--- a/circle.yml
+++ b/circle.yml
@@ -1,40 +1,23 @@
-#machine:
-  java:
-    version: openjdk8
-  environment:
-    ANDROID_HOME: /usr/local/android-sdk-linux
-    INFER_HOME: /home/ubuntu/.infer/infer-linux64-v0.1.0/infer/infer
-    PATH: $INFER_HOME/bin:$PATH
-dependencies:
-  cache_directories:
-    - ~/.gradle
-    - ~/.android
-    - ~/.infer 
-  override:
-    - echo y | android update sdk --no-ui --filter "android-24,build-tools-24.0.1"
-    - echo y | android update sdk --no-ui --all --filter "platform-tools, tools"
-    - echo y | android update sdk --no-ui --all --filter "android-24, build-tools-24.0.1"
-    - echo y | android update sdk --no-ui --all --filter "extra-android-m2repository"
-    - echo y | android update sdk --no-ui --all --filter "extra-android-support"
-test:
-  pre:
-    # start the emulator
-    - emulator -avd circleci-android19 -no-skin -no-audio -no-window -no-boot-anim:
-        background: true
-        parallel: true
-  override:
-  
-    # run infer
-    - ./gradlew clean
-    - infer -i -- ./gradlew build
-    # wait for it to have booted
-    - circle-android wait-for-boot
-    # run tests  against the emulator.
-    - ./gradlew connectedAndroidTest
-    # run lint checker
-    - lint app --html app/build/outputs/result.html
+#
+# Build configuration for Circle CI
+#
 
-    # copy results
-    - cp -r app/build/outputs $CIRCLE_ARTIFACTS
-    - cp -r app/infer-out $CIRCLE_ARTIFACTS
-    - cp -r app/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORTS
+general:
+artifacts:
+- /home/ubuntu/kronos/app/build/outputs/apk/
+
+machine:
+java:
+version: oraclejdk8
+environment:
+ANDROID_HOME: /usr/local/android-sdk-linux
+
+dependencies:
+override:
+- echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-24.0.1,android-24,extra-google-m2repository,extra-google-google_play_services,extra-android-support
+- ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+
+test:
+override:
+- (./gradlew assemble):
+timeout: 360
