--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: android
 jdk: oraclejdk8
 sudo: false
-env: 
 
 android:
   components:
@@ -16,6 +15,8 @@ android:
     - extra-android-m2repository
     - addon-google_apis-google-24  
     - sys-img-armeabi-v7a-android-19
+env:
+    - ANDROID_SDK_HOME: /usr/local/android-sdk-linux
 before_script:
   # Create and start emulator
   - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
