--- a/circle.yml
+++ b/circle.yml
@@ -18,24 +18,9 @@ dependencies:
         - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
 
 test:
-  pre:
-    # start the emulator
-    - emulator -avd circleci-android19 -no-skin -no-audio -no-window -no-boot-anim:
-        background: true
-        parallel: true
-  override:
-  
-    # run infer
-    - ./gradlew clean
-    - infer -i -- ./gradlew build
-    # wait for it to have booted
-    - circle-android wait-for-boot
-    # run tests  against the emulator.
-    - ./gradlew connectedAndroidTest
-    # run lint checker
-    - lint app --html app/build/outputs/result.html
-
-    # copy results
-    - cp -r app/build/outputs $CIRCLE_ARTIFACTS
-    - cp -r app/infer-out $CIRCLE_ARTIFACTS
-    - cp -r app/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORTS
+    override:
+       - (./gradlew assemble):
+            timeout: 360
+       - cp -r app/build/outputs $CIRCLE_ARTIFACTS
+       - cp -r app/infer-out $CIRCLE_ARTIFACTS
+       - cp -r app/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORTS
