--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '24.0.1'
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
+
     defaultConfig {
-        applicationId "kappacode.kronos"
-        minSdkVersion 19
-        targetSdkVersion 24
+        applicationId "br.com.kronos.kronos"
+        minSdkVersion 16
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -24,9 +25,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:support-v4:24.2.1'
+    compile files('libs/mpandroidchartlibrary-2-1-0.jar')
+    compile "com.android.support:support-v4:22.0.+"
+    compile "com.android.support:appcompat-v7:22.0.+"
+    compile 'com.android.support:design:22.2.0'
     testCompile 'junit:junit:4.12'
-
 }
